--- a/cms-contentful-app/package.json
+++ b/cms-contentful-app/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.2",
     "contentful-import": "^7.8.7",
     "postcss": "8.4.5",
+    "sass": "^1.55.0",
     "tailwindcss": "^3.0.15"
   }
 }
